[package]
name = "taxi_data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
datafusion = { version = "43.0.0", features = ["parquet", "pyarrow"] }
deltalake = { version = "0.22.3", features = ["datafusion", "deltalake-aws", "s3"] }
futures = "0.3.31"
object_store = { version = "0.11.1", features = ["aws"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
